# simplechatapp

./: .gitignore  README.md
tux-chat-client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tux-chat-client/styles/: style.css
tux-chat-server/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  server.cpp  server.h
tux-chat-server/styles/: style.css
